...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/dashboardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="User Dashboard"
                android:textColor="?attr/colorPrimary"
                android:textSize="28sp"
...
                android:layout_marginStart="8dp"
                app:icon="@drawable/outline_filter_list_24" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeeAllEvents"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="See All Events"
            android:textStyle="bold"
            android:textSize="16sp"
...
